# pvcast

./: .codespell-ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  requirements.txt  test_websocket.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  renovate.json  template-sync.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: CI.yml  codecov.yml  codeql.yaml  codeql.yml  labels.yaml  linting.yaml  publish.yml  release.yaml  schedule-update-actions.yml  semantic-pr-check.yml  sphinx.yml  template-sync.yml  tests.yaml  typing.yaml
data/: cec_inverters.csv  cec_inverters_sam.csv  cec_modules_pvlib.csv  cec_modules_sam.csv
docs/: conf.py  devcontainer.md  developer.md  index.rst  modules.rst  pre-commit-config.md  pylint.md  pyproject.md  python_package.hello_world.rst  python_package.rst  requirements.txt  vscode.md  workflows.md
exampleconfigs/: example_enphase.yaml  example_solaredge.yaml
notebooks/pvlib/: plot_mixed_orientation.ipynb  pvgis_tmy.ipynb
notebooks/weather_data/openweathermap/: met_no.ipynb  owm.ipynb
pvcast/: __init__.py  __main__.py  const.py
pvcast/commandline/: __init__.py  commandline.py
pvcast/config/: __init__.py  configreader.py
pvcast/data/proc/: cec_inverters.csv  cec_modules.csv
pvcast/hass/: hassapi.py
pvcast/homeassistant/: __init__.py  homeassistantapi.py
pvcast/model/: __init__.py  const.py  forecasting.py  model.py  util.py
pvcast/util/: __init__.py  timestamps.py  units.py
pvcast/weather/: __init__.py  clearoutside.py  hass.py  homeassistant.py  weather.py
pvcast/webserver/: __init__.py  app.py  const.py
pvcast/webserver/models/: __init__.py  base.py  clearsky.py  historical.py  live.py
pvcast/webserver/routers/: __init__.py  clearsky.py  dependencies.py  helpers.py  historical.py  live.py  utils.py
scripts/: cec_devices.py  const.py  merge_dev_libs.py
src/: README.md
src/pvcast/: __main__.py
src/pvcast/config/: configreader.py  pv_config.yaml  pv_config_enphase.yaml  pv_config_se.yaml
src/pvcast/data/proc/: cec_inverters.csv
src/pvcast/hass/: hass.py  hassapi.py
src/pvcast/model/: const.py  forecasting.py  model.py  pvmodel.py
src/pvcast/util/: cec_devices.py  merge_dev_libs.py
src/pvcast/weather/: __init__.py  clearoutside.py  hass.py  weather.py
src/pvcast/webserver/: __init__.py  api_schema.yaml  const.py  webserver.py
src/pvcast/webserver/api/: __init__.py
src/pvcast/webserver/api/schemas/: clearsky.py  common.py  forecast.py  historic.py
src/pvcast/webserver/apis/: __init__.py  forecast.py  historic.py
src/pvcast/webserver/apis/schemas/: __init__.py  api_out.py  forecast_sch.py
src/pvcast/webserver/controllers/: clearsky.py
src/pvcast/webserver/models/: base.py  clearsky.py
tests/: __init__.py  clearoutside.txt  conftest.py  const.py  ha_weather_data.json  ruff.toml  test_config_error.yaml  test_config_no_sec.yaml  test_config_sec.yaml  test_configreader.py  test_hass.py  test_methods.py  test_pv_model.py  test_secrets.yaml  test_weather.py  test_weather_clearoutside  test_weather_clearoutside.py  test_weather_platform.py  test_webserver.py
tests/commandline/: __init__.py  test_commandline.py
tests/data/: config.yaml  pvgis_out.csv  pvgis_out.txt  secrets.yaml
tests/integration/: test_hass.py  test_hass_api_int.py  test_weather_data.json  test_weather_int.py  test_weather_platform.py  test_webserver_int.py
tests/unit/: __init__.py  conftest.py  const.py  test_config_error.yaml  test_config_missing_sec.yaml  test_config_no_sec.yaml  test_config_sec.yaml  test_configreader.py  test_forecasting.py  test_hass_api_unit.py  test_model.py  test_pv_model.py  test_secrets.yaml  test_weather.py  test_weather_platform.py  test_weather_platform_ha.py  test_weather_platform_unit.py
tests/unit/configreader/: __init__.py  conftest.py  test_configreader.py
tests/unit/homeassistant/: __init__.py  test_hass_api_unit.py
tests/unit/model/: __init__.py  test_forecasting.py  test_model.py
tests/unit/util/: __init__.py  test_timestamps.py  test_units.py  timestamps.py  units.py
tests/unit/weather/: __init__.py  conftest.py  test_weather.py  test_weather_platform.py  test_weather_platform_co.py  test_weather_platform_ha.py
tests/unit/webserver/: __init__.py  conftest.py  test_helpers.py  test_webserver.py
